Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -177,19 +177,7 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/dropdown/keyboardshortcut/excise-286565879</li>
-
-<li>$:/state/new-shortcut/$:/config/shortcuts/excise-286565879</li>
-
 <li>$:/state/showeditpreview</li>
-
-<li>$:/state/sidebar</li>
-
-<li>$:/state/tab--1498284803</li>
-
-<li>$:/state/tab-1749438307</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/status/IsAnonymous</li>
 
@@ -202,6 +190,8 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
+
+<li>$:/temp/search</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -353,7 +343,7 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
-<div created="20200203062147877" modified="20200203062159595" title="$:/config/Manager/Sort" revision="3" bag="default">
+<div created="20200203062147877" modified="20200203062200661" title="$:/config/Manager/Sort" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>tags</pre>
 </div>
 <div created="20191121035130341" modified="20191121035240128" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/full-screen" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -368,10 +358,10 @@ Error message and password prompt
 <div created="20191121010924297" modified="20191121010925327" title="$:/config/RelinkOnRename" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>yes</pre>
 </div>
-<div created="20200203063411328" modified="20200203063411328" title="$:/config/shortcuts-mac/excise" revision="1" bag="default">
+<div created="20200203063411328" modified="20200203063412389" title="$:/config/shortcuts-mac/excise" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>cmd-E</pre>
 </div>
-<div created="20200203062000486" modified="20200203063402214" title="$:/config/shortcuts/excise" revision="3" bag="default">
+<div created="20200203062000486" modified="20200203063403274" title="$:/config/shortcuts/excise" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
 <div created="20191121032312480" modified="20191121032313532" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/export-tiddler" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -9833,26 +9823,8 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200203061940303" modified="20200203061940303" title="$:/state/dropdown/keyboardshortcut/excise-286565879" revision="1" bag="default">
-<pre>open</pre>
-</div>
-<div created="20200203063347807" modified="20200203063358522" title="$:/state/new-shortcut/$:/config/shortcuts/excise-286565879" revision="9" bag="default">
-<pre>Backspace</pre>
-</div>
-<div created="20200203045558633" modified="20200203045558633" title="$:/state/showeditpreview" revision="1" bag="default">
+<div created="20200203170833914" modified="20200203175825247" title="$:/state/showeditpreview" revision="3" bag="default">
 <pre>yes</pre>
-</div>
-<div created="20200203033851061" modified="20200203075116816" title="$:/state/sidebar" revision="12" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200203062042691" modified="20200203062045543" title="$:/state/tab--1498284803" revision="3" bag="default">
-<pre>$:/core/ui/AdvancedSearch/Filter</pre>
-</div>
-<div created="20200203061933173" modified="20200203061933173" title="$:/state/tab-1749438307" revision="1" bag="default">
-<pre>$:/core/ui/ControlPanel/KeyboardShortcuts</pre>
-</div>
-<div created="20200203033853231" modified="20200203063339893" title="$:/state/tab/sidebar--595412856" revision="13" bag="default">
-<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -9866,7 +9838,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200203033855730" list="[[UCLA Math 168 - Introduction to Networks]] [[Properties of Real World Networks]]" modified="20200203074427726" title="$:/StoryList" revision="74" bag="default">
+<div created="20200203165828390" list="" modified="20200203165830908" title="$:/StoryList" revision="13" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9914,11 +9886,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1440&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;900&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9926,6 +9898,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200203165821712" modified="20200203165826545" title="$:/temp/search" revision="12" bag="default">
+<pre>UCLA Math 16</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -10249,7 +10224,7 @@ Floating Point Hardware - https://imgur.com/hnfgAVy - very complex - usually man
 <div created="20191120052924192" modified="20191121010447190" tags="incomplete research [[intelligence project]] [[machine learning]] [[reinforcement learning]]" title="Auxiliary Tasks in Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div created="20200203043659595" modified="20200203054002760" tags="[[graph theory]]" title="Basics of Network Theory" revision="5" bag="default">
+<div created="20200203043659595" modified="20200203054004445" tags="[[graph theory]]" title="Basics of Network Theory" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Simple graph - network with no self loops and no multi-edges
 
 Directed Graph - graph with edges that have direction, Undirected Graph - opposite
@@ -10329,7 +10304,7 @@ e.g. Grouping age in brackets such as 0-5, 5-10, 10-20 etc. to indicate to the m
 
 Opposite of [[One-Hot Encoding]] in a sense.</pre>
 </div>
-<div created="20200203054034875" modified="20200203070625122" tags="[[graph theory]]" title="Centrality Measures" revision="5" bag="default">
+<div created="20200203054034875" modified="20200203070626255" tags="[[graph theory]]" title="Centrality Measures" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Centrality - a way to quantify how important a node is to the network
 
 Degree Centrality - the degree of the node
@@ -10916,7 +10891,7 @@ e.g. [[Neural Networks]], [[Ensemble Models]] are hard to explain but very accur
 * Can swap the order of two adjacent for every or two adjacent there exists without changing logical meaning
 * Cannot swap the order of for every and there exists, in particular: There exists y such that for every x ... is stronger than for every x there exists y ...</pre>
 </div>
-<div created="20200203054844757" modified="20200203072125245" tags="[[graph theory]]" title="Groups of Nodes" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div created="20200203054844757" modified="20200203072126323" tags="[[graph theory]]" title="Groups of Nodes" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Cliques - maximal set of nodes where every 2 nodes have an edge between them - can overlap
 
 Relaxations of this notion follow.
@@ -11398,8 +11373,56 @@ Proof: Consider a cauchy sequence in the product space. Note that this implies c
 
 Corollary 3: $$\bf{R}^n$$ with the usual metric ($$l_2$$) is complete</pre>
 </div>
-<div created="20200203074448591" modified="20200203074448591" tags="[[graph theory]]" title="Properties of Real World Networks" revision="1" bag="default">
-<pre></pre>
+<div created="20200203074448591" modified="20200203175953294" tags="[[graph theory]]" title="Properties of Real World Networks" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<pre>Summary of facts about various real world networks: https://imgur.com/j68ZoQ5
+
+Components in Networks:
+
+* typically a large component fills most of the network (usually 1/2 and very often 90%) while the rest of the network is divided into many small components - e.g. actors 
+* Also quite a few networks with just 1 component - this is not random - e.g. internet is 1 component as it has to be as a communication network - or a web crawler crawling a page (it can only reach pages that are linked to therefore only to nodes that have edges)
+* Quite unlikely to have two large components as just 1 edge between the two would collapse it down and quite likely to have 1 edge amongst a very large number of nodes
+* Some networks have only small components e.g. immediate family relations
+
+Components in Directed Networks:
+
+* Weakly connected components behave a lot like the components in undirected network (mentioned above)
+* Strongly connected component - usually one large one and other smaller ones (e.g. WWW - largest one ~ 1/4) - associated with it is an out component (set of all nodes that can be reached along a directed path from any starting point in the strongly connected component) and an in component (set of nodes from which any node in the strongly connected component can be reached)
+* By definition, in and out components are supersets of strongly connected component and each has a large portion of nodes that lie outside it (e.g. in &amp; out-component of WWW's largest one occupy ~ 1/4 outside the strongly connected component)
+* Bowtie diagram - https://imgur.com/Mz8zZmt
+* Not all directed networks have a large strongly connected component - e.g. acyclic networks have none &gt; 1, and in real life citation networks are approximately so (cycles wouldn't really make sense)
+
+Shortest Paths and Small World Effect:
+
+* Mean distance between nodes for the network $$l = \frac{1}{n} \sum_i l_i = \frac{1}{n^2} \sum+{ij} d_ij$$ - usually take average over this value of each component as otherwise would be infinite
+* Usually this takes small values ~ 10 even for nodes with millions of nodes
+* random models suggest that typical path lengths should be on order log(n) for n nodes'
+* Directed networks: diameter of the network is often small maybe O(log(n))
+* Funneling effect - some nodes are very well connected and facilitate a lot of the small world effect on their own
+
+Degree Distributions:
+
+* $$p_k$$ - the number of nodes with degree k or the probability that a node had degree k in a given network
+* Almost all networks have a tail of high degree hubs - right skewed (can do the same for in degree and out degree of networks) 
+
+Power Laws:
+
+* the logarithm of $$p_k$$ is a linear function of the logarithm of k for the degree distribution of the internet
+* Degree distributions don't follow the power law throughout the entire range since a true power law is monotonically decreasing but deg distributions sometimes vary from this for small values of k
+* Networks with power law degree distributions are called scale-free networks
+* Use logarithmic binning - every bin is wider than its predecessor by a constant factor shows power law more accurately as now can integrate to see how many nodes have degree &gt;= k
+
+Distributions of other centrality measures:
+
+* Eigenvalue and betweenness centrality also tend to have right-skewed distributions in most networks
+* Exception to this is closeness centrality as values for distance have a small range (bounded by diameter ~ log n and below by 1)
+
+Transitivity and the clustering coefficient:
+
+* main idea is that relations represented by edges are often transitive
+* perfect transitivity -&gt; every component is a clique
+* clustering coefficient is the fraction of paths of length 2 that are closed (i.e. can be extended to form a 3-cycle)
+* $$C = \frac{\text{num of closed paths of length 2}}{\text{num of paths of length 2}} = \frac{\text{num of triangles} \times 6}{\text{num of paths of length 2}} =  \frac{\text{num of triangles} \times 3}{\text{num of connected triangles}}$$
+* Social networks have high values of clustering coefficient like 0.2 till 0.5 or 0.6</pre>
 </div>
 <div created="20200131001522764" modified="20200131030522424" tags="[[needs formatting]] [[talk summary]] [[quantum computing]]" title="Quantum Temporal Logic by Nengkun Yu" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Quantum Shock - Quantum computing can solve halting problem (Ji-Natarajan)
@@ -11511,7 +11534,7 @@ Decidability of QTL formula - programs without nondeterminism, </pre>
 <div author="Siddharth Joshi" created="20191125022514242" modified="20191125022735084" tags="[[reinforcement learning]] [[machine learning]] incomplete" title="Reinforcement Learning: Introduction" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://skymind.ai/wiki/deep-reinforcement-learning</pre>
 </div>
-<div created="20200203072201259" modified="20200203074406651" tags="[[graph theory]]" title="Similarity Measures" revision="3" bag="default">
+<div created="20200203072201259" modified="20200203074407751" tags="[[graph theory]]" title="Similarity Measures" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Similarity Measures - to form groups of similar nodes on the basis of connectivity to other nodes, edges, types of edges etc.
 
 For Social Position Analysis, we want:
@@ -11654,7 +11677,7 @@ Proof:
 # [[Metric Topology]]
 # [[Complete Metric Spaces]]</pre>
 </div>
-<div created="20200203042433991" modified="20200203074558185" tags="ongoing [[discrete math]] math [[graph theory]]" title="UCLA Math 168 - Introduction to Networks" revision="6" bag="default">
+<div created="20200203042433991" modified="20200203074559261" tags="ongoing [[discrete math]] math [[graph theory]]" title="UCLA Math 168 - Introduction to Networks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Syllabus:
 
 # [[Basics of Network Theory]]
