--- a/index.html
+++ b/index.html
@@ -177,8 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/showeditpreview</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -253,6 +251,8 @@ Error message and password prompt
 
 <li>How to Contribute?</li>
 
+<li>IaaS</li>
+
 <li>Induction</li>
 
 <li>Instructions: Language of the Computer</li>
@@ -289,6 +289,8 @@ Error message and password prompt
 
 <li>Overview of Machine Learning</li>
 
+<li>PaaS</li>
+
 <li>Persistent Homology</li>
 
 <li>Products of Metric Spaces</li>
@@ -301,9 +303,13 @@ Error message and password prompt
 
 <li>Reinforcement Learning: Introduction</li>
 
+<li>SaaS</li>
+
 <li>Similarity Measures</li>
 
 <li>Slow Cooker Chicken Curry</li>
+
+<li>SoC</li>
 
 <li>Standardization of Features</li>
 
@@ -9823,9 +9829,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200203170833914" modified="20200203175825247" title="$:/state/showeditpreview" revision="3" bag="default">
-<pre>yes</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9838,7 +9841,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200203165828390" list="" modified="20200203165830908" title="$:/StoryList" revision="13" bag="default">
+<div created="20200204070639162" list="Welcome [[How to Contribute?]]" modified="20200204070639162" title="$:/StoryList" revision="17" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9899,8 +9902,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200203165821712" modified="20200203165826545" title="$:/temp/search" revision="12" bag="default">
-<pre>UCLA Math 16</pre>
+<div created="20200204070628422" modified="20200204070633682" title="$:/temp/search" revision="16" bag="default">
+<pre>decision trees</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -10224,7 +10227,7 @@ Floating Point Hardware - https://imgur.com/hnfgAVy - very complex - usually man
 <div created="20191120052924192" modified="20191121010447190" tags="incomplete research [[intelligence project]] [[machine learning]] [[reinforcement learning]]" title="Auxiliary Tasks in Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div created="20200203043659595" modified="20200203054004445" tags="[[graph theory]]" title="Basics of Network Theory" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200203043659595" modified="20200203181208851" tags="[[graph theory]]" title="Basics of Network Theory" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Simple graph - network with no self loops and no multi-edges
 
 Directed Graph - graph with edges that have direction, Undirected Graph - opposite
@@ -10235,6 +10238,8 @@ Adjacency Matrix:
 
 * Undirected Simple Unweighted: $$A_{ij} = 1$$ if edge between node i and j else 0 (for weighted graphs this would be the weight of the edge, for Multi-graphs (graphs with multiple edges) the number of edges between the 2 nodes, for self loops - count it twice to allow for consistency in handshake lemma ($$\sum_v deg(v) = 2 \cdot m$$) where m is the number of edges
 * Directed Networks - $$A_{ij} = 1$$ if there is an edge from node j to node i - Rows denote edges to the node
+
+K-regular graph - graph where every node has degree k
 
 Tree - connected, undirected, acyclic graph
 
@@ -10304,7 +10309,7 @@ e.g. Grouping age in brackets such as 0-5, 5-10, 10-20 etc. to indicate to the m
 
 Opposite of [[One-Hot Encoding]] in a sense.</pre>
 </div>
-<div created="20200203054034875" modified="20200203070626255" tags="[[graph theory]]" title="Centrality Measures" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200203054034875" modified="20200203184020634" tags="[[graph theory]]" title="Centrality Measures" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Centrality - a way to quantify how important a node is to the network
 
 Degree Centrality - the degree of the node
@@ -10338,7 +10343,7 @@ Problem with this definition for directed networks: A node with in-degree 0 that
 Katz Centrality - deals with above problem by giving each node some centrality for 'free' i.e. minimum centrality is some value $$\beta$$
 
 * $$c_i = \alpha \sum_{j = 1}^n A_{ij} c_j  + \beta$$
-* Therefore (after setting $$\beta = 1$$), $$c = \beta (I_n - \alpha A) \bf{1} = (I_n - \alpha A) \bf{1} $$ where $$\bf{1}$$ is the vector of all 1s
+* Therefore (after setting $$\beta = 1$$), $$c = \beta (I_n - \alpha A) \bf{1} = (I_n - \alpha A) \bf{1} $$ where $$\bf{1}$$ is the vector of all 1s ''fix inverses''
 * If $$\alpha \rightarrow 0$$ then constant term dominates and every node has same centrality and if $$\alpha \rightarrow \frac{1}{eigenvalue}$$, $$c$$ diverges
 * First time c diverges is when $$\alpha \rightarrow 1/largest eigenvalue$$, therefore usually pick alpha very close to largest eigenvalue and thus very close to eigenvalue centrality 
 
@@ -10347,7 +10352,7 @@ Page Rank Centrality (Used by Google to rank pages for search): In previous syst
 * Divide contribution by out degree i.e. if node points to many other nodes then it doesn't contribute as much
 * $$c_i = \alpha \sum_{j = 1}^n A_{ij} \frac{c_j}{k_j^{out}}  + \beta$$ 
 * Deal with $$k_j^out = 0$$ and matrix form: $$D_{ii} = max\{k_i, 1\}$$ and $$c = \alpha A D^{-1} c + \beta \textbf{1}$$
-* Set $$\beta = 1$$, $$c = (I - \alpha A D^{-1}) \textbf{1}$$
+* Set $$\beta = 1$$, $$c = (I - \alpha A D^{-1}) \textbf{1}$$ ''fix inverses''
 * Other applications of page rank - https://arxiv.org/abs/1407.5107
 * Set $$\alpha &lt; 1/\lambda_{largest}$$ where $$\lambda$$ is an eigenvalue of $$A D^{-1}$$
 * For undirected networks with $$\lambda = 1$$, as vector of all degrees is an eigenvector for it
@@ -10929,7 +10934,7 @@ Creating a network with 2 k-components and one k-core - take two copies of a k +
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010432345" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119211052677" modified="20191124061635080" tags="introduction" title="How to Contribute?" type="text/plain" revision="0" bag="default">
+<div author="Siddharth Joshi" created="20191119211052677" modified="20200204071038561" tags="introduction" title="How to Contribute?" type="text/vnd.tiddlywiki" revision="6" bag="default">
 <pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new 'tiddler'
 
 Once you're done editing, save your tiddler and then click the export button (the one with the upward arrow - 2nd button from the left on the top right of your tiddler) to export as a '.tid' file and email the tiddler to me at sjoshi804@gmail.com (I'll go ahead and add it to the wiki!). 
@@ -10938,13 +10943,16 @@ You can also use the same method for editing an existing tiddler. The ones tagge
 
 You can also:
 - add tags that help group your tiddler with other tiddlers and make searching easier
-- link to other tiddlers by using the syntax ~[[Note Name]] 
+- link to other tiddlers by using the syntax $$[[\text{Note Title}]]$$
 - add an author by adding a new field for author
 - write tiddlers that are plain text (like this) or in tiddlywiki's markup format by changing the type (using the dropdown at the bottom of your tiddler)
 
 and many more things that you can look up by googling tiddlywiki
 
 Thanks for contributing!</pre>
+</div>
+<div created="20200204064724736" modified="20200204064742039" tags="technology" title="IaaS" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>Infrastructure as a service (IaaS) are online services that provide high-level APIs used to dereference various low-level details of underlying network infrastructure like physical computing resources, location, data partitioning, scaling, security, backup etc. A hypervisor, such as Xen, Oracle ~VirtualBox, Oracle VM, KVM, VMware ESX/ESXi, or Hyper-V, LXD, runs the virtual machines as guests. Pools of hypervisors within the cloud operational system can support large numbers of virtual machines and the ability to scale services up and down according to customers' varying requirements.</pre>
 </div>
 <div created="20191227165419740" modified="20191227165949790" tags="[[real analysis]] math" title="Induction" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Proof for Induction based on [[Natural Numbers]] axiomatic definition.
@@ -11344,6 +11352,13 @@ ML in practice:
 * Learn models
 * Interpret Results and tweak accordingly</pre>
 </div>
+<div created="20200204064753630" modified="20200204064918698" tags="technology" title="PaaS" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>Platform as a service (PaaS) or application platform as a service (aPaaS) or platform-based service is a category of cloud computing services that provides a platform allowing customers to develop, run, and manage applications without the complexity of building and maintaining the infrastructure typically associated with developing and launching an app.
+
+In April 2008, Google launched App Engine, with a free trial version limited to 10,000 developers.[16] This was said to have &quot;turned the Internet cloud computing space into a fully-fledged industry virtually overnight.&quot;[17]
+
+The original intent of PaaS was to simplify the code-writing process for developers, with the infrastructure and operations handled by the PaaS provider. Originally, all ~PaaSes were in the public cloud. Because many companies did not want to have everything in the public cloud, private and hybrid PaaS options (managed by internal IT departments) were created.</pre>
+</div>
 <div author="Siddharth Joshi" created="20191124054140398" modified="20191124054454331" tags="incomplete [[intelligence project]] research math topology" title="Persistent Homology" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Persistent homology is a method for computing topological features of a space at different spatial resolutions. More persistent features are detected over a wide range of spatial scales and are deemed more likely to represent true features of the underlying space rather than artifacts of sampling, noise, or particular choice of parameters.
 
@@ -11373,7 +11388,7 @@ Proof: Consider a cauchy sequence in the product space. Note that this implies c
 
 Corollary 3: $$\bf{R}^n$$ with the usual metric ($$l_2$$) is complete</pre>
 </div>
-<div created="20200203074448591" modified="20200203175953294" tags="[[graph theory]]" title="Properties of Real World Networks" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div created="20200203074448591" modified="20200203175954404" tags="[[graph theory]]" title="Properties of Real World Networks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Summary of facts about various real world networks: https://imgur.com/j68ZoQ5
 
 Components in Networks:
@@ -11534,6 +11549,9 @@ Decidability of QTL formula - programs without nondeterminism, </pre>
 <div author="Siddharth Joshi" created="20191125022514242" modified="20191125022735084" tags="[[reinforcement learning]] [[machine learning]] incomplete" title="Reinforcement Learning: Introduction" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://skymind.ai/wiki/deep-reinforcement-learning</pre>
 </div>
+<div created="20200204064622667" modified="20200204064633242" tags="technology" title="SaaS" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>Software as a service (SaaS) is a software distribution model in which a third-party provider hosts applications and makes them available to customers over the Internet. SaaS is one of three main categories of cloud computing, alongside infrastructure as a service (IaaS) and platform as a service (PaaS).</pre>
+</div>
 <div created="20200203072201259" modified="20200203074407751" tags="[[graph theory]]" title="Similarity Measures" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Similarity Measures - to form groups of similar nodes on the basis of connectivity to other nodes, edges, types of edges etc.
 
@@ -11574,6 +11592,9 @@ Instructions:
 - Add pureed tomatoes, diced chicken and saute-ed mixture to slow cooker for 6 hours
 - Add salt to taste
 - Add coriander leaves on top if available</pre>
+</div>
+<div created="20200204065217501" modified="20200204065253178" tags="technology" title="SoC" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>A system on chip is an integrated circuit (also known as a &quot;chip&quot;) that integrates all components of a computer or other electronic system. These components typically (but not always) include a central processing unit (CPU), memory, input/output ports and secondary storage – all on a single substrate or microchip, the size of a coin.[1] It may contain digital, analog, mixed-signal, and often radio frequency signal processing functions, depending on the application. </pre>
 </div>
 <div created="20191122021118679" modified="20191122021707250" tags="[[machine learning]] [[feature engineering]]" title="Standardization of Features" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>(Also known as z-score normalization)
@@ -11658,7 +11679,7 @@ Proof:
 # [[Metric Spaces]]
 # [[Topological Spaces]]</pre>
 </div>
-<div author="Siddharth Joshi" created="20191120203243535" modified="20191227164441415" tags="incomplete [[real analysis]] math ucla" title="UCLA Math 131AH - Real Analysis" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div author="Siddharth Joshi" created="20191120203243535" modified="20200204064519774" tags="incomplete [[real analysis]] math ucla" title="UCLA Math 131AH - Real Analysis" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
 # [[For Every and There Exists]]
 # [[Natural Numbers]]
@@ -11674,8 +11695,7 @@ Proof:
 # [[Rearrangements of Series]]
 # [[Functions]]
 # [[Cardinality]]
-# [[Metric Topology]]
-# [[Complete Metric Spaces]]</pre>
+# [[Metric Spaces]]</pre>
 </div>
 <div created="20200203042433991" modified="20200203074559261" tags="ongoing [[discrete math]] math [[graph theory]]" title="UCLA Math 168 - Introduction to Networks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Syllabus:
@@ -11689,7 +11709,7 @@ Proof:
 # [[Models of Networks]]
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191119180323660" modified="20191121034908978" tags="introduction" title="Welcome" type="text/plain" revision="0" bag="default">
+<div author="Siddharth Joshi" created="20191119180323660" modified="20200204070841035" tags="introduction" title="Welcome" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>Hi, welcome to my TiddlyWiki!
 This is a collection of notes on a wide variety of topics compiled from my personal work and that of my friends &amp; family.
 Enjoy!</pre>
