Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -189,8 +189,6 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
-<li>$:/temp/search</li>
-
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
@@ -9841,7 +9839,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200204070639162" list="Welcome [[How to Contribute?]]" modified="20200204070639162" title="$:/StoryList" revision="17" bag="default">
+<div list="Welcome [[How to Contribute?]]" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9889,11 +9887,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;900&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9901,9 +9899,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20200204070628422" modified="20200204070633682" title="$:/temp/search" revision="16" bag="default">
-<pre>decision trees</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -10934,7 +10929,7 @@ Creating a network with 2 k-components and one k-core - take two copies of a k +
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010432345" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119211052677" modified="20200204071038561" tags="introduction" title="How to Contribute?" type="text/vnd.tiddlywiki" revision="6" bag="default">
+<div author="Siddharth Joshi" created="20191119211052677" modified="20200204071039639" tags="introduction" title="How to Contribute?" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new 'tiddler'
 
 Once you're done editing, save your tiddler and then click the export button (the one with the upward arrow - 2nd button from the left on the top right of your tiddler) to export as a '.tid' file and email the tiddler to me at sjoshi804@gmail.com (I'll go ahead and add it to the wiki!). 
@@ -11709,8 +11704,8 @@ Proof:
 # [[Models of Networks]]
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191119180323660" modified="20200204070841035" tags="introduction" title="Welcome" type="text/vnd.tiddlywiki" revision="1" bag="default">
-<pre>Hi, welcome to my TiddlyWiki!
+<div author="Siddharth Joshi" created="20191119180323660" modified="20200204071226887" tags="introduction" title="Welcome" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>Hi, welcome to my ~TiddlyWiki!
 This is a collection of notes on a wide variety of topics compiled from my personal work and that of my friends &amp; family.
 Enjoy!</pre>
 </div>
